--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -25,7 +25,7 @@
                 <li class="nav-item"><a th:href="@{/research/list}" class="nav-link ">List</a></li>
                 <li th:if="${#authorization.expression('isAuthenticated()')}" class="nav-item">
                     <!-- 로그인한 사용자 -->
-                    <a th:href="@{/auth/profile}" class="nav-link ">Profile</a>
+                    <a th:href="@{#}" class="nav-link ">Profile</a>
                 </li>
                 <li th:unless="${#authorization.expression('isAuthenticated()')}" class="nav-item">
                     <!-- 로그인하지 않은 사용자만 볼 수 있는 내용 -->
